--- a/Pokedex/assets/css/global.css
+++ b/Pokedex/assets/css/global.css
@@ -9,8 +9,8 @@ body{
 .content {
   padding: 1rem;
   background-color: #fff;
-  height: 100vh;
-  width: 100vh;
+  height: 100%;
+  width: 100%;
 
 }
 
