--- a/Pokedex/assets/css/pokedex.css
+++ b/Pokedex/assets/css/pokedex.css
@@ -7,6 +7,62 @@
     margin: 0;
   }
   
+  .normal{
+    background-color: #a6a877 ;
+  } 
+  .grass{
+    background-color: #77c850 ;
+  }
+  .fire{
+    background-color: #ee7f30;
+  }
+  .water{
+    background-color: #678fee;
+  }
+  .electric{
+    background-color: #f7cf2e;
+  }
+  .ice{
+    background-color: #98d5d7;
+  }
+  .ground{
+    background-color: #dfbf69;
+  }
+  .flying{
+    background-color: #a98ff0;
+  }
+  .poison{
+    background-color: #a040a0;
+  }
+  .fighting{
+    background-color: #bf3029;
+  }
+  .psychic{
+    background-color: #f65687;
+  }
+  .dark{
+    background-color: #725847;
+  }
+  .rock{
+    background-color: #b8a137;
+  }
+.bug{
+  background-color: #a8b720;
+}
+.ghost{
+  background-color: #6e5896;
+}
+.steel{
+  background-color: #b9b7cf;
+}
+.dragon{
+  background-color: #6f38f6;
+}
+.fairy{
+  background-color: #f9aec7;
+}
+
+
   /* On screens that are 380px or less, set the background color to blue */
   @media screen and (min-width: 380px) {
       .pokemons {
@@ -32,7 +88,6 @@
   .pokemon {
     margin: 0.5rem;
     padding: 2rem 1rem;
-    background-color: #49d0b0;
     color: #fff;
     border-radius: 1rem;
     display: flex;
@@ -48,6 +103,7 @@
   .pokemon .name {
     color: #fff;
     margin-bottom: 0.25rem;
+    text-transform: capitalize;
   }
   .pokemon .detail {
     display: flex;
@@ -66,17 +122,36 @@
   }
   
   .pokemon .detail .type {
-    background-color: #61e1ca;
+    
     color: #fff;
     padding: 0.25rem 0.1rem;
     margin: 0.25rem;
     font-size: 0.825rem;
     border-radius: 1rem;
+    filter:brightness(1.1);
+    text-align: center;
   }
   
   .pokemon .detail img {
     border-style: none;
     max-width: 100%;
     height: 100px;
+  }
+  .pagination{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 1rem;
+  }
+
+  .pagination button{
+    padding: .25rem .5rem;
+    margin: .25rem 0;
+    font-size: .625rem;
+    background-color: #6c79db;
+    border: none;
+    border-radius: 1rem;
   }
   
